--- a/html/static/css/style.css
+++ b/html/static/css/style.css
@@ -1147,6 +1147,16 @@ form small{
     margin-top: -14px;
 }
 
+.pacote-infos-item{
+    float: left;
+    width: 100%;
+    margin-bottom: 0;
+}
+
+.btn-success.add-pacote-shipment{
+    margin-right: 5px;
+}
+
 @media (max-width: 767px){
     .navbar-brand img:last-child {
         display: none;
