--- a/html/templates/email/add-shipment.html
+++ b/html/templates/email/add-shipment.html
@@ -7,24 +7,25 @@
 </head>
 <body>
 
-<div id="template-email" style="background: #eee; padding: 18px 30px 45px 30px; font: 13px/120% 'Helvetica';">
-    <div style="background: #fff; padding: 10px 20px 20px 20px;">
+<div id="template-email" style="background: #fff; padding: 18px 30px 45px 30px; font: 13px/120% 'Helvetica';">
+     <a href="http://vendedorinternacional.net/"><img width="75" src="{{ protocol}}://{{ domain }}/static/img/logo_sup.png"><img width="200" src="{{ protocol}}://{{ domain }}/static/img/logo_bottom.png"></a>
+    <div style="background: #eee; padding: 10px 20px 20px 20px;">
         <p style="color:#858585;font:13px/120% 'Helvetica'">{% trans "Prezado(a)" %} {{ user_name }}</p>
         <p style="color:#858585;font:13px/120% 'Helvetica'">{% trans "Seu envio foi cadastrado com sucesso. Seguem abaixo os dados do envio:" %}</p>
-        <p style="color:#858585;font:13px/120% 'Helvetica'">{% trans "Envio" %}: {{ shipment.id }}</p>
-        <p style="color:#858585;font:13px/120% 'Helvetica'">{% trans "Data de envio" %}: {{ shipment.send_date|localize }}</p>
-        <p style="color:#858585;font:13px/120% 'Helvetica'">{% trans "Quantidade de produtos" %}: {{ shipment.total_products }}</p>
-        <p style="color:#858585;font:13px/120% 'Helvetica'">{% trans "Valor total" %}: {{ shipment.cost|localize }}</p>
+        <p style="color:#858585;font:13px/120% 'Helvetica'"><strong>{% trans "Envio" %}:</strong> {{ shipment.id }}</p>
+        <p style="color:#858585;font:13px/120% 'Helvetica'"><strong>{% trans "Data de envio" %}:</strong> {{ shipment.send_date|localize }}</p>
+        <p style="color:#858585;font:13px/120% 'Helvetica'"><strong>{% trans "Quantidade de produtos" %}:</strong> {{ shipment.total_products }}</p>
+        <p style="color:#858585;font:13px/120% 'Helvetica'"><strong>{% trans "Valor total" %}:</strong> {{ shipment.cost|localize }}</p>
         <br>
         {% for product in products %}
-        <p style="color:#858585;font:13px/120% 'Helvetica'">{% trans "Produto" %}: {{ product.product.name }}</p>
-        <p style="color:#858585;font:13px/120% 'Helvetica'">{% trans "Quantidade" %}: {{ product.quantity }}</p>
+        <p style="color:#858585;font:13px/120% 'Helvetica'"><strong>{% trans "Produto" %}:</strong> {{ product.product.name }}</p>
+        <p style="color:#858585;font:13px/120% 'Helvetica'"><strong>{% trans "Quantidade" %}:</strong> {{ product.quantity }}</p>
         {% endfor %}
         <p>
             <a href="{{ protocol}}://{{ domain }}{% url 'shipment' %}">{% trans "Clique aqui" %}</a> {% trans "para acessar sua lista de envios" %}.
         </p>
     </div>
-    <small style="color: #858585;font: 13px/120% 'Helvetica';width: 100%;float: left;margin: 10px 1px;font-size: 10px;">{% trans "Caso você não tenha feito esta solicitação nos avise através do e-mail contato@aaaa.com." %}</small>
+    <small style="color: #858585;font: 13px/120% 'Helvetica';width: 100%;float: left;margin: 10px 1px;font-size: 10px;">{% trans "Caso você não tenha feito esta solicitação nos avise através do e-mail <a href="mailto:contato@vendedorinternacional.online">contato@vendedorinternacional.online</a>." %}</small>
     <small style="color: #858585;font: 13px/120% 'Helvetica';width: 100%;float: left;margin: 10px 1px;font-size: 10px;">{% trans "Este é um e-mail automático disparado pelo sistema. Favor não respondê-lo, pois esta conta não é monitorada." %}</small>
 </div>
 
