--- a/html/templates/email/registration-email.html
+++ b/html/templates/email/registration-email.html
@@ -7,7 +7,7 @@
 <body>
 
 <div id="template-email" style="background: #fff; padding: 18px 30px 45px 30px; font: 13px/120% 'Helvetica';">
-    <a href="#"><img width="75" src="http://54.233.138.37/vendedor-internacional/img/logo_sup.png"><img width="200" src="http://54.233.138.37/vendedor-internacional/img/logo_bottom.png"></a>
+    <a href="#"><img width="75" src="https://54.233.149.84/static/img/logo_sup.png"><img width="200" src="https://54.233.149.84/static/img/logo_bottom.png"></a>
     <div style="background: #eee; padding: 10px 20px 20px 20px;">
         <p style="color:#858585;font:15px/120% 'Helvetica'">$arg2</p>
         <p style="color:#858585;font:15px/120% 'Helvetica'">$arg3</p>
