--- a/html/templates/email/shipment-add-package.html
+++ b/html/templates/email/shipment-add-package.html
@@ -18,7 +18,7 @@
             <a href="{{ protocol}}://{{ domain }}{% url 'shipment_details' shipment.id %}">{% trans "Clique aqui" %}</a> {% trans "para acessar seu envio e efetuar o pagamento." %}.
         </p>
     </div>
-    <small style="color: #858585;font: 13px/120% 'Helvetica';width: 100%;float: left;margin: 10px 1px;font-size: 10px;">{% trans "Caso você não tenha feito esta solicitação nos avise através do e-mail <a href="mailto:contato@vendedorinternacional.online">contato@vendedorinternacional.online</a>." %}</small>
+    <small style="color: #858585;font: 13px/120% 'Helvetica';width: 100%;float: left;margin: 10px 1px;font-size: 10px;">{% trans "Caso você não tenha feito esta solicitação nos avise através do e-mail" %} <a href="mailto:contato@vendedorinternacional.online">contato@vendedorinternacional.online</a>.</small>
     <small style="color: #858585;font: 13px/120% 'Helvetica';width: 100%;float: left;margin: 10px 1px;font-size: 10px;">{% trans "Este é um e-mail automático disparado pelo sistema. Favor não respondê-lo, pois esta conta não é monitorada." %}</small>
 </div>
 
