Ajustes site institucional e lista de produtos

--- a/html/static/css/style.css
+++ b/html/static/css/style.css
@@ -1154,6 +1154,10 @@ form small{
     margin-right: 5px;
 }
 
+.limit-field{
+    width: 240px;
+}
+
 @media (max-width: 767px){
     .navbar-brand img:last-child {
         display: none;
