teste de pagamento pelo paypal e adição do filtro por rastreamento.

--- a/html/templates/product_stock.html
+++ b/html/templates/product_stock.html
@@ -49,8 +49,9 @@
                         </select>
                     </div>
                     <div class="form-group col-md-2">
-                        <label for="filtro-Rastreamento">Rastreamento</label>
-                        <input type="text" class="form-control" id="filtro-Rastreamento" name="user" placeholder="Rastreamento..." value="">
+                        {% trans "Rastreamento" as tracking_label %}
+                        <label for="filtro-Rastreamento">{{ tracking_label }}</label>
+                        <input type="text" class="form-control" id="filtro-Rastreamento" name="tracking" placeholder="{{ tracking_label }}..." value="{{ filter_values.tracking }}">
                     </div>
                     <div class="form-group col-md-3">
                         <button type="submit" class="btn btn-primary filtar-btn" id="filter-btn"><i class="fa fa-fw fa-filter"></i> {% trans "Filtrar" %}</button>
